--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -4,7 +4,7 @@
 	isbn = {978-3-642-19175-6 978-3-642-19176-3},
 	pages = {1--15},
 	booktitle = {Essential Software Architecture},
-	publisher = {Springer Berlin Heidelberg},
+	publisher = {Springer Berlin Heidelberg.},
 	author = {Gorton, Ian},
 	urldate = {2016-02-14},
 	year = {2011},
@@ -28,10 +28,10 @@
 	title = {What is Software Architecture?},
 	isbn = {978-1-4503-1308-7},
 	doi = {10.1145/2389836.2389879},
-	series = {{SAICSIT} '12},
+	series = {{SAICSIT} '12.},
 	pages = {363--373},
 	booktitle = {Proceedings of the South African Institute for Computer Scientists and Information Technologists Conference},
-	publisher = {{ACM}},
+	publisher = {{ACM.}},
 	author = {Solms, Fritz},
 	year = {2012},
 	keywords = {reference architecture, software architecture}
@@ -51,7 +51,7 @@
  author = {Ran, Alexander},
  title = {Architectural Structures and Views},
  booktitle = {Proceedings of the Third International Workshop on Software Architecture},
- series = {ISAW '98},
+ series = {ISAW '98.},
  year = {1998},
  isbn = {1-58113-081-3},
  location = {Orlando, Florida, USA},
@@ -59,8 +59,7 @@
  numpages = {4},
  doi = {10.1145/288408.288438},
  acmid = {288438},
- publisher = {ACM},
- address = {New York, NY, USA},
+ publisher = {ACM.},
  keywords = {architectural views, requirements, software architecture, structures of software}
 } 
 
@@ -96,7 +95,7 @@ month={Sept}
  author = {Galster, Matthias},
  title = {Dependencies, Traceability and Consistency in Software Architecture: Towards a View-based Perspective},
  booktitle = {Proceedings of the 5th European Conference on Software Architecture: Companion Volume},
- series = {ECSA '11},
+ series = {ECSA '11.},
  year = {2011},
  isbn = {978-1-4503-0618-8},
  location = {Essen, Germany},
@@ -105,8 +104,7 @@ month={Sept}
  numpages = {4},
  doi = {10.1145/2031759.2031761},
  acmid = {2031761},
- publisher = {ACM},
- address = {New York, NY, USA},
+ publisher = {ACM.},
  keywords = {architecture viewpoints, consistency, dependencies, software architecture, traceability}
 } 
 
@@ -114,7 +112,7 @@ month={Sept}
  author = {Garlan, David},
  title = {Software Architecture: A Roadmap},
  booktitle = {Proceedings of the Conference on The Future of Software Engineering},
- series = {ICSE '00},
+ series = {ICSE '00.},
  year = {2000},
  isbn = {1-58113-253-0},
  location = {Limerick, Ireland},
@@ -122,8 +120,7 @@ month={Sept}
  numpages = {11},
  doi = {10.1145/336512.336537},
  acmid = {336537},
- publisher = {ACM},
- address = {New York, NY, USA},
+ publisher = {ACM.},
  keywords = {software architecture, software design, software engineering}
 } 
 
@@ -131,7 +128,7 @@ month={Sept}
 	author = {Kruchten, Philippe},
 	title = {Architectural Blueprints—The “4+1” View
 Model of Software Architecture},
-	publisher = {IEEE},
+	publisher = {IEEE.},
 	pages = {42--50},
 	year = {1995}
 }
@@ -160,7 +157,7 @@ Model of Software Architecture},
 
 @ARTICLE{ISOIEEE42010, 
 author = {{ISO/IEC/IEEE}},
-journal={ISO/IEC/IEEE 42010:2011}, 
+journal={ISO/IEC/IEEE 42010:2011.}, 
 title={ISO/IEC/IEEE Systems and software engineering -- Architecture description}, 
 year={2011}, 
 pages={1-46}, 
@@ -170,12 +167,19 @@ month={Dec}
 
 }
 
-@article{ISO/IEC25010:2011,
-	title={ISO/IEC 25010:2011 Systems and software engineering -- Systems and software Quality Requirements and Evaluation (SQuaRE) -- System and software quality models},
-	author={ISO},
-	year={2011},
-	url={http://www.iso.org/iso/catalogue\_detail.htm?csnumber=35733}
+
+
+@techreport{ISO/IEC25010:2011,
+    author = {{ISO/IEC}},
+    citeulike-article-id = {10951538},
+    posted-at = {2012-07-27 13:14:40},
+    priority = {2},
+    publisher = {ISO/IEC},
+    title = {{ISO/IEC 25010 - Systems and software engineering - Systems and software Quality Requirements and Evaluation (SQuaRE) - System and software quality models}},
+    year = {2010},
+    url={http://www.iso.org/iso/catalogue\_detail.htm?csnumber=35733}
 }
+
 
 @article{UML,
 	title={OMG Unified Modeling Language TM (OMG UML), version 2.5},
@@ -284,7 +288,8 @@ author={S. Jungmayr},
 booktitle={Software Maintenance, 2002. Proceedings. International Conference on}, 
 title={Identifying test-critical dependencies}, 
 year={2002}, 
-pages={404-413}, 
+pages={404-413},
+publisher = {{IEEE.}}, 
 keywords={program testing;software maintenance;software metrics;regression testing;software maintenance cost reduction;software testability metrics;system structure;test-critical dependencies;Automatic testing;Controllability;Costs;Design for testability;Guidelines;Observability;Software maintenance;Software systems;Software testing;System testing}, 
 doi={10.1109/ICSM.2002.1167797}, 
 ISSN={1063-6773} 
@@ -303,7 +308,7 @@ publisher={{IEEE.}}
 @article{Freedman:1991:TSC:126218.126229,
  author = {Freedman, Roy S.},
  title = {Testability of Software Components},
- journal = {IEEE Trans. Softw. Eng.},
+ journal = {IEEE Transactions on Software Engineering},
  issue_date = {June 1991},
  volume = {17},
  number = {6},
@@ -341,7 +346,7 @@ publisher={{IEEE.}}
 	title = {Improving the software development process using testability research},
 	pages = {114--121},
 	booktitle = {Software Reliability Engineering, 1992. Proceedings., Third International Symposium on},
-	publisher = {{IEEE}},
+	publisher = {{IEEE.}},
 	author = {Voas, Jeffrey M. and Miller, Keith W.},
 	urldate = {2016-03-02},
 	year = {1992}
@@ -378,7 +383,7 @@ publisher={{IEEE.}}
 	doi = {10.1109/SBCARS.2014.21},
 	shorttitle = {Bad Smells in Software Product Lines},
 	pages = {84--94},
-	publisher = {{IEEE}},
+	publisher = {{IEEE.}},
 	author = {Vale, Gustavo and Figueiredo, Eduardo and Abilio, Ramon and Costa, Heitor},
 	urldate = {2016-03-15},
 	date = {2014-09},
@@ -390,7 +395,7 @@ publisher={{IEEE.}}
 	isbn = {978-0-7695-4948-4 978-1-4673-5833-0},
 	doi = {10.1109/CSMR.2013.27},
 	pages = {177--186},
-	publisher = {{IEEE}},
+	publisher = {{IEEE.}},
 	author = {Macia, I. and Garcia, A. and Chavez, C. and von Staa, A.},
 	urldate = {2016-03-15},
 	date = {2013-03},
@@ -429,7 +434,7 @@ month={May}
 	volume = {2},
 	pages = {211--218},
 	booktitle = {Computer Software and Applications Conference, 2005. {COMPSAC} 2005. 29th Annual International},
-	publisher = {{IEEE}},
+	publisher = {{IEEE.}},
 	author = {Gao, Jerry and Shih, Ming-Chih},
 	urldate = {2016-03-15},
 	year = {2005}
@@ -439,7 +444,7 @@ month={May}
  author = {Eickelmann, Nancy S. and Richardson, Debra J.},
  title = {What Makes One Software Architecture More Testable Than Another?},
  booktitle = {Joint Proceedings of the Second International Software Architecture Workshop (ISAW-2) and International Workshop on Multiple Perspectives in Software Development (Viewpoints '96) on SIGSOFT '96 Workshops},
- series = {ISAW '96},
+ series = {ISAW '96.},
  year = {1996},
  isbn = {0-89791-867-3},
  location = {San Francisco, California, USA},
@@ -454,7 +459,7 @@ month={May}
 	title = {Design and code time testability analysis for object oriented systems},
 	pages = {590--592},
 	booktitle = {Computing for Sustainable Global Development ({INDIACom}), 2014 International Conference on},
-	publisher = {{IEEE}},
+	publisher = {{IEEE.}},
 	author = {Joshi, Madhura and Sardana, Neetu},
 	urldate = {2016-03-15},
 	year = {2014}
@@ -467,7 +472,7 @@ month={May}
 	isbn = {978-1-4673-7076-9},
 	doi = {10.1109/SAM.2015.8},
 	pages = {1--7},
-	publisher = {{IEEE}},
+	publisher = {{IEEE.}},
 	author = {Fontana, Francesca Arcelli and Ferme, Vincenzo and Zanoni, Marco},
 	urldate = {2016-03-15},
 	date = {2015-05},
@@ -480,7 +485,7 @@ month={May}
 	doi = {10.1109/SBCARS.2011.18},
 	shorttitle = {On the Impact of Aspect-Oriented Code Smells on Architecture Modularity},
 	pages = {41--50},
-	publisher = {{IEEE}},
+	publisher = {{IEEE.}},
 	author = {Macia, Isela and Garcia, Alessandro and von Staa, Arndt and Garcia, Joshua and Medvidovic, Nenad},
 	urldate = {2016-03-15},
 	date = {2011-09},
@@ -517,13 +522,12 @@ month={May}
 
 @inproceedings{garcia_identifying_2009,
 	title = {Identifying Architectural Bad Smells},
-	doi = {10.1109/CSMR.2009.59},
-	abstract = {Certain design fragments in software architectures can have a negative impact on system maintainability. In this paper, we introduce the concept of architectural "bad smells," which are frequently recurring software designs that can have non-obvious and significant detrimental effects on system lifecycle properties. We define architectural smells and differentiate them from related concepts, such as architectural antipatterns and code smells. We also describe four representative architectural smells we encountered in the context of reverse-engineering eighteen grid technologies and refactoring one large industrial system.},
 	eventtitle = {13th European Conference on Software Maintenance and Reengineering, 2009. {CSMR} '09},
 	pages = {255--258},
 	booktitle = {13th European Conference on Software Maintenance and Reengineering, 2009. {CSMR} '09},
 	author = {Garcia, J. and Popescu, D. and Edwards, G. and Medvidovic, N.},
 	year = {2009},
+	publisher = {{IEEE.}},
 	keywords = {Application software, architectural bad smell identification, Architectural Bad Smells, Architectural Refactoring, Computer architecture, Computer industry, Computer science, Design engineering, design fragments, grid computing, grid technologies, industrial system refactoring, reverse engineering, software architecture, software architectures, Software design, software maintenance, Software systems, system lifecycle properties, system maintainability, Technology management}
 }
 
